@@ -11,6 +11,7 @@ version <next>:
 - update cuvid/nvenc headers to Video Codec SDK 8.0.14
 - afir audio filter
 - scale_cuda CUDA based video scale filter
+- librsvg support for svg rasterization
 
 version 3.3:
 - CrystalHD decoder moved to new decode API
